ci(core-backend): 更新 .env.example 文件中的数据库配置
- 设置 DB_HOST 为 127.0.0.1
- 设置 DB_PORT 为 3306
- 将 DB_DATABASE从 gocmf 改为 goravel-panel
- 将 DB_USERNAME 从 gocmf 改为 admin
- 设置 DB_PASSWORD 为 123456

--- a/.env.example
+++ b/.env.example
@@ -25,11 +25,11 @@ LOG_LEVEL=debug
 
 # mysql 数据库配置
 DB_CONNECTION=mysql
-DB_HOST=
-DB_PORT=
-DB_DATABASE=gocmf
-DB_USERNAME=gocmf
-DB_PASSWORD=
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=goravel-panel
+DB_USERNAME=admin
+DB_PASSWORD=123456
 
 # postgres 数据库配置
 #DB_CONNECTION=
